# Projeto-BigData-Python

./: main-updated.py  main.py  produtos_com_lucro.csv  pyproject.toml  requeriments.txt
